<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">JobDemo</string>
    <!--Activity名称-->
    <string name="activity_send_notify">发送通知demo</string>
    <string name="activity_flow_layout">流布局demo</string>
    <string name="activity_expandable_listview">分组ListViewDemo</string>
    <string name="activity_camera_demo">相机使用demo</string>
    <!--如果要按字母排序显示activity名称就写下来-->
    <string name="debug_app_name">JobDemo_debug</string>
    <string name="web_view">webView</string>
    <string name="start_camera_page">启动相机页面设置了uri</string>
    <string name="two_button">第二个按钮</string>
    <string name="code_generator_plugin_details">测试根据layout自动生成activity或fragment或adapter</string>
    <string name="plugin_test">插件测试</string>
    <string name="please_enter_content">请在此输入内容</string>
    <string name="enter_password">请输入密码</string>
    <string name="default_content">默认内容</string>
    <string name="studio_demo">studio_使用教程</string>
    <string name="privacy_intent">隐式跳转</string>
    <string name="intent_pracelable">intent传递parcelable对象</string>
    <string name="name">姓名：</string>
    <string name="age">年龄：</string>
    <string name="picture">图片</string>
    <string name="cl_radius">根据角度偏移</string>
    <string name="gender">性别：</string>
    <string name="width_height">宽高比不得了了啊</string>
    <string name="textview5">TextView5</string>
    <string name="textview6">TextView6</string>
    <string name="textview7">TextView7</string>
    <string name="hi">你好</string>
    <string name="i_am_fine">我好</string>
    <string name="he_is_good">他好</string>
    <string name="national_day">国庆</string>
    <string name="mid_autumn">中秋佳节</string>
    <string name="good_vacation">好假期</string>
    <string name="layout_create_picture">布局生成图片</string>
    <string name="todo">TODO</string>
    <string name="azqx">安装权限</string>
    <string name="update_tip">需要授予%s“安装未知应用”权限才能更新</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="deleteALL">删除全部</string>
    <string name="addNullName">添加一条姓名为空的数据</string>
    <string name="alterNameNull">指定Id姓名改为空</string>
    <string name="alter">修改</string>
    <string name="deleteOrAlterHind">请输入要删除或修改的用户Id</string>
    <string name="deleteOrQueryHind">请输入要查询或删除的用户Id</string>
    <string name="default_count">默认数量</string>
    <string name="show_dialog">显示对话框</string>
    <string name="show_fragment_dialog">FragmentDialog对话框</string>
    <string name="show_bottom_sheet_dialog">BottomSheetFragmentDialog对话框</string>
    <string name="startSentence">跳转到常用语页面</string>
    <string name="dialog_demo">对话框demo</string>
    <string name="selector_client">请选择客户</string>
    <string name="setAdapter">设置适配器</string>
    <string name="really_size">真实的尺寸</string>
    <string name="getCurrentTime">获得当前时间</string>
    <string name="AdapterControlShowCount">适配器控制listView显示数量</string>
    <string name="branchTreadShowToast">分支线程弹toast</string>
    <string name="startTiming">开始倒计时</string>
    <string name="inputTimingNumber_Please">请输入倒计时秒数</string>
    <string name="timingNumbers">倒计时：%1$s秒</string>
    <string name="timingNumber">倒计时：0秒</string>
    <string name="changeData">改变数据</string>
    <string name="SettingData">未设置数据</string>
    <string name="Setting">设置</string>
    <string name="BaseObservableUse">BaseObservable使用</string>
    <string name="unknown">unknown</string>
    <string name="noData">没有数据</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startSecond">startSecond</string>
    <string name="email">邮箱</string>
    <string name="phone">电话</string>
    <string name="location">位置</string>
    <string name="button">Button</string>
    <string name="TextView">TextView</string>
    <string name="toolbar_title">toolbar标题</string>
    <string name="toolbar_subtitle">在xml中定义title要使用toolbar命名空间</string>
    <string name="search">搜索</string>
    <string name="save">保存</string>
    <string name="click_object">点击了---------%s</string>
    <string name="click_int">点击了---------%d</string>
    <string name="addPosition">在第%d行-----添加了%s</string>
    <string name="inputContentPlease">请输入搜索内容</string>
    <string name="shear_your_idea">分享你的想法吧</string>
    <string name="scrollview_string_font_size">scrollview滑动时设置字体大小</string>
    <string name="whichRow">第%d行</string>
    <string name="whichRowStr">第%s行</string>
    <string name="whichRowInt">第%d行</string>
    <string name="modification">修改</string>
    <string name="save_sdcard_root">保存文件到SD卡</string>
    <string name="save_external_file">保存到应用外部存储文件</string>
    <string name="save_picture_gallery">保存图片到相册</string>
    <string name="open_image_pick">打开图片选择</string>
    <string name="create_direction">创建目录</string>
    <string name="old_choose_picture">旧版选择图片</string>
    <string name="select_picture">选择图片</string>
    <string name="save_external_dir">保存到应用外部缓存</string>
    <string name="save_app_file">保存到应用内部存储文件</string>
    <string name="save_app_dir">保存到应用内部缓存</string>
    <string name="clear_cache">清除缓存</string>
    <string name="startInfoShow">启动infoShow页面</string>
    <string name="close">关闭</string>
    <string name="photograph">拍照</string>
    <string name="exclude">exclude</string>
    <string name="showToast">showToast</string>
    <string name="saveData">saveData</string>
    <string name="getData">getData</string>
    <string name="networkIsAvailable">网络连接是否可用</string>
    <string name="isWifiConnect">是否为WiFi连接</string>
    <string name="isCellularConnect">是否流量网络连接</string>
    <string name="showNetworkType">显示网络类型</string>
    <string name="showCellphoneIP">显示手机IP</string>
    <string name="openCellphoneNetworkSetting">打开手机网络设置页面</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="confirmDownload">确认下载</string>
    <string name="loginFail">login fail please again try</string>
    <string name="experience">经验</string>
    <string name="AllUsersAreDisplayed">已显示全部用户</string>
    <string name="friendRecommend">好友推荐</string>
    <string name="addAddressListFriend">添加通讯录好友</string>
    <string name="enterpriseRecruitment">企业招聘</string>
    <string name="postJobConsult">发布职位的咨询</string>
    <string name="adService">广告业务</string>
    <string name="adCooperation">广告招商合作</string>
    <string name="serviceHelp">客服帮助</string>
    <string name="serviceHelpDetails">及时解决您的问题</string>
    <string name="searchFriend">搜索好友</string>
    <string name="userId">用户id：</string>
    <string name="userName">用户姓名：</string>
    <string name="userAge">用户年龄：</string>
    <string name="toolText">你知道怎么做才是好的</string>
    <string name="simulationKnowXY">模拟不知道图片宽高显示瀑布流布局</string>
    <string name="back">返回</string>
    <string name="companyDetails">企业详情</string>
    <string name="companyType">公司类型</string>
    <string name="fold">折叠</string>
    <string name="showDialog">显示dialog</string>
    <string name="showCircleDialog">圆角dialog</string>
    <string name="show_bottom_dialog">底部弹出dialog</string>
    <string name="showDefaultTip">显示默认文字</string>
    <string name="changeDefaultTip">修改默认提示文字</string>
    <string name="changeTip">DialogDemo修改了默认文字</string>
    <string name="skipAd">跳过</string>
    <string name="start_baidu_map">通过经纬度调起百度地图</string>
    <string name="start_gaode_map">通过经纬度调起高德地图</string>
    <string name="start_tencent_map">通过经纬度调起腾讯地图</string>
    <string name="start_baidu_by_address">通过地址调起百度地图</string>
    <string name="start_gaode_by_address">通过地址调起高德地图</string>
    <string name="start_tencent_by_address">通过地址调起腾讯地图</string>
    <string name="look_address">查看地址</string>
    <string name="get_address_code">获取地理编码</string>
    <string name="api_get_address_code">商用api取地理编码</string>
    <string name="please_enter_address">请输入地址</string>
    <string name="Toast">Toast</string>
    <string name="revamp">修改</string>
    <string name="sort">排序</string>
    <string name="getFileClassConst">获得File文件的常量</string>
    <string name="addViewToWindow">添加view到window</string>
    <string name="needReviseRow">要修改的行</string>
    <string name="needReviseContent">要修改的内容</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="startTransition">开始转换</string>
    <string name="constrainDifficultIdea">约束布局难点</string>
    <string name="propertyAnimationDemo">属性动画demo</string>
    <string name="changeTowWidth">改变tow宽度</string>
    <string name="changeThreeWidth">改变three宽度</string>
    <string name="changeCancel">改变cancel</string>
    <string name="enterThePositionYouWantToChange">修改的ID</string>
    <string name="listApiDemo">kotlin集合Api使用</string>
    <string name="cancelTimer">取消倒计时</string>
    <string name="restart">重新开始</string>
    <string name="getVerifyCode">获取验证码</string>
    <string name="pleaseEnterVerifyCode">请输验证码</string>
    <string name="switchBtn">SwitchBtn</string>
    <string name="checkDeviceInstallPermission">检测是否具备安装应用权限</string>
    <string name="inputDialog">带输入框的对话框</string>
    <string name="startGpsString">启动gps设置页面</string>
    <string name="canBeInstalled">可以安装</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="rename">请输入新的昵称</string>
    <string name="showMapView">显示地图的控件</string>
    <string name="send">发送</string>
    <string name="addressAndColon">地址：</string>
    <string name="selectLocation">选择地址</string>
    <string name="mustInput">必填</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="startCamera">启动相机</string>
    <string name="check_update">检查更新</string>
    <string name="httpUse">Http使用</string>
    <string name="httpUrlConnection">httpURLConnection</string>
    <string name="okHttp">okHttp</string>
    <string name="okPost">post提交数据</string>
    <string name="retrofit">retrofit</string>
    <string name="query">查询</string>
    <string name="fillPdfModel">填充pdf模版</string>
    <string name="createPdf">生成pdf文件</string>
    <string name="webLinks">网络链接</string>
    <string name="code_create_pdf">A代码创建Pdf</string>
    <string name="fillColor">填充颜色</string>
    <string name="showInjectInfo">显示注入信息</string>
    <string name="title_activity_open_im_login">OpenImLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="please_input_user_id">请输入用户id</string>
    <string name="please_input_user_token">请输入用户Token</string>
    <string name="login">登录</string>
</resources>
