<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.nex3z.flowlayout.FlowLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_start_camera_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_camera_page"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startCamera" />
        <Button
            android:id="@+id/btn_selectPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_picture" />
    </com.nex3z.flowlayout.FlowLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:contentDescription="@string/todo" />
</LinearLayout>