<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activity.DefaultLocation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/please_enter_address"
                tools:ignore="Autofill,TextFields" />

            <Button
                android:id="@+id/btn_select_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/look_address" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_tdt_84"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tv_tdt_map_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />


        <com.nex3z.flowlayout.FlowLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_aip_get_address_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/api_get_address_code" />

            <Button
                android:id="@+id/btn_get_address_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_address_code" />

            <Button
                android:id="@+id/btn_by_address_startBaiduMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_baidu_by_address" />

            <Button
                android:id="@+id/btn_by_address_startGaodeMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_gaode_by_address" />

            <Button
                android:id="@+id/btn_by_address_startTencentMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_tencent_by_address" />
        </com.nex3z.flowlayout.FlowLayout>

        <com.nex3z.flowlayout.FlowLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_startBaiduMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_baidu_map" />

            <Button
                android:id="@+id/btn_startGaodeMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_gaode_map" />

            <Button
                android:id="@+id/btn_startTencentMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_tencent_map" />
        </com.nex3z.flowlayout.FlowLayout>

        <TextView
            android:id="@+id/tv_convert_baidu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tv_gps_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tv_gps_address_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/tv_gps_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/tv_network_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tv_network_address_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/tv_network_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/tv_baidu_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tv_baidu_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
    </LinearLayout>
</ScrollView>